--- a/windows-terminal/settings.json
+++ b/windows-terminal/settings.json
@@ -10,7 +10,8 @@
     "defaults": {
       "startingDirectory": "D:\\code",
       "fontFace": "FantasqueSansMono NF",
-      "fontSize": 10
+      "fontSize": 13,
+      "colorScheme": "Flatland"
     },
     "list": [
       {
@@ -40,7 +41,29 @@
     ]
   },
 
-  "schemes": [],
+  "schemes": [
+    {
+      "name": "Flatland",
+      "black": "#1d1d19",
+      "red": "#f18339",
+      "green": "#9fd364",
+      "yellow": "#f4ef6d",
+      "blue": "#5096be",
+      "purple": "#695abc",
+      "cyan": "#d63865",
+      "white": "#ffffff",
+      "brightBlack": "#7d8b8f",
+      "brightRed": "#d22a24",
+      "brightGreen": "#a7d42c",
+      "brightYellow": "#ff8949",
+      "brightBlue": "#61b9d0",
+      "brightPurple": "#695abc",
+      "brightCyan": "#d63865",
+      "brightWhite": "#ffffff",
+      "background": "#1d1f21",
+      "foreground": "#b8dbef"
+    }
+  ],
 
   "keybindings": []
 }
