--- a/windows-terminal/settings.json
+++ b/windows-terminal/settings.json
@@ -65,5 +65,12 @@
     }
   ],
 
-  "keybindings": []
+  "keybindings": [
+    { "command": { "action": "copy", "singleLine": false }, "keys": "ctrl+c" },
+    { "command": "paste", "keys": "ctrl+v" },
+    { "command": "nextTab", "keys": "ctrl+right" },
+    { "command": "prevTab", "keys": "ctrl+left" },
+    { "command": "duplicateTab", "keys": "ctrl+down" },
+    { "command": "toggleFullscreen", "keys": "ctrl+up" }
+  ]
 }
