--- a/windows-terminal/settings.json
+++ b/windows-terminal/settings.json
@@ -1,76 +1,92 @@
 {
-  "$schema": "https://aka.ms/terminal-profiles-schema",
-
-  "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-
-  "copyOnSelect": false,
-  "copyFormatting": false,
-
-  "profiles": {
-    "defaults": {
-      "startingDirectory": "D:\\code",
-      "fontFace": "FantasqueSansMono NF",
-      "fontSize": 13,
-      "colorScheme": "Flatland"
+    "$schema": "https://aka.ms/terminal-profiles-schema",
+    "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+    "copyOnSelect": false,
+    "copyFormatting": false,
+    "profiles": {
+        "defaults": {
+            "startingDirectory": "D:\\code",
+            "fontFace": "FantasqueSansMono NF",
+            "fontSize": 13,
+            "colorScheme": "custom"
+        },
+        "list": [
+            {
+                "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+                "hidden": false,
+                "name": "PowerShell Core",
+                "source": "Windows.Terminal.PowershellCore"
+            },
+            {
+                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+                "name": "Windows PowerShell",
+                "commandline": "powershell.exe",
+                "hidden": true
+            },
+            {
+                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
+                "name": "Command Prompt",
+                "commandline": "cmd.exe",
+                "hidden": true
+            },
+            {
+                "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
+                "name": "Azure Cloud Shell",
+                "source": "Windows.Terminal.Azure",
+                "hidden": true
+            }
+        ]
     },
-    "list": [
-      {
-        "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-        "hidden": false,
-        "name": "PowerShell Core",
-        "source": "Windows.Terminal.PowershellCore"
-      },
-      {
-        "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
-        "name": "Windows PowerShell",
-        "commandline": "powershell.exe",
-        "hidden": true
-      },
-      {
-        "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
-        "name": "Command Prompt",
-        "commandline": "cmd.exe",
-        "hidden": true
-      },
-      {
-        "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-        "name": "Azure Cloud Shell",
-        "source": "Windows.Terminal.Azure",
-        "hidden": true
-      }
+    "schemes": [
+        {
+            "name": "custom",
+            "blue": "#5DA5CF",
+            "brightBlue": "#5DA5CF",
+            "green": "#21B58B",
+            "brightGreen": "#21B58B",
+            "purple": "#63549E",
+            "brightPurple": "#63549E",
+            "red": "#A8324C",
+            "brightRed": "#A8324C",
+            "yellow": "#FFB30F",
+            "brightYellow": "#FFB30F",
+            "cyan": "#FE64A3",
+            "brightCyan": "#FE64A3",
+            "black": "#1d1f21",
+            "brightBlack": "#b8dbef",
+            "white": "#b8dbef",
+            "brightWhite": "#b8dbef",
+            "background": "#1d1f21",
+            "foreground": "#b8dbef"
+        }
+    ],
+    "keybindings": [
+        {
+            "command": {
+                "action": "copy",
+                "singleLine": false
+            },
+            "keys": "ctrl+c"
+        },
+        {
+            "command": "paste",
+            "keys": "ctrl+v"
+        },
+        {
+            "command": "nextTab",
+            "keys": "ctrl+right"
+        },
+        {
+            "command": "prevTab",
+            "keys": "ctrl+left"
+        },
+        {
+            "command": "duplicateTab",
+            "keys": "ctrl+down"
+        },
+        {
+            "command": "toggleFullscreen",
+            "keys": "ctrl+up"
+        }
     ]
-  },
-
-  "schemes": [
-    {
-      "name": "Flatland",
-      "black": "#1d1d19",
-      "red": "#f18339",
-      "green": "#9fd364",
-      "yellow": "#f4ef6d",
-      "blue": "#5096be",
-      "purple": "#695abc",
-      "cyan": "#d63865",
-      "white": "#ffffff",
-      "brightBlack": "#7d8b8f",
-      "brightRed": "#d22a24",
-      "brightGreen": "#a7d42c",
-      "brightYellow": "#ff8949",
-      "brightBlue": "#61b9d0",
-      "brightPurple": "#695abc",
-      "brightCyan": "#d63865",
-      "brightWhite": "#ffffff",
-      "background": "#1d1f21",
-      "foreground": "#b8dbef"
-    }
-  ],
-
-  "keybindings": [
-    { "command": { "action": "copy", "singleLine": false }, "keys": "ctrl+c" },
-    { "command": "paste", "keys": "ctrl+v" },
-    { "command": "nextTab", "keys": "ctrl+right" },
-    { "command": "prevTab", "keys": "ctrl+left" },
-    { "command": "duplicateTab", "keys": "ctrl+down" },
-    { "command": "toggleFullscreen", "keys": "ctrl+up" }
-  ]
 }
