--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -31,7 +31,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.detectIndentation": false,
     "editor.find.addExtraSpaceOnTop": false,
-    "editor.fontFamily": "Fantasque Sans Mono",
+    "editor.fontFamily": "FantasqueSansMono NF",
     "editor.fontLigatures": true,
     "editor.fontSize": 17,
     "editor.formatOnSave": true,
