--- a/windows-terminal/settings.json
+++ b/windows-terminal/settings.json
@@ -1,92 +1,107 @@
 {
-  "$help": "https://aka.ms/terminal-documentation",
-  "$schema": "https://aka.ms/terminal-profiles-schema",
-  "actions": [
+    "$help": "https://aka.ms/terminal-documentation",
+    "$schema": "https://aka.ms/terminal-profiles-schema",
+    "actions": 
+    [
+        {
+            "command": "duplicateTab",
+            "keys": "ctrl+down"
+        },
+        {
+            "command": "paste",
+            "keys": "ctrl+v"
+        },
+        {
+            "command": 
+            {
+                "action": "prevTab"
+            },
+            "keys": "ctrl+left"
+        },
+        {
+            "command": 
+            {
+                "action": "copy",
+                "singleLine": false
+            },
+            "keys": "ctrl+c"
+        },
+        {
+            "command": 
+            {
+                "action": "nextTab"
+            },
+            "keys": "ctrl+right"
+        },
+        {
+            "command": "toggleFullscreen",
+            "keys": "ctrl+up"
+        }
+    ],
+    "copyFormatting": "none",
+    "copyOnSelect": false,
+    "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+    "newTabMenu": 
+    [
+        {
+            "type": "remainingProfiles"
+        }
+    ],
+    "profiles": 
     {
-      "command": "duplicateTab",
-      "keys": "ctrl+down"
+        "defaults": 
+        {
+            "colorScheme": "custom",
+            "font": 
+            {
+                "face": "FantasqueSansM Nerd Font",
+                "size": 13.0
+            }
+        },
+        "list": 
+        [
+            {
+                "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+                "hidden": false,
+                "name": "PowerShell Core",
+                "source": "Windows.Terminal.PowershellCore"
+            },
+            {
+                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+                "hidden": false,
+                "name": "Windows PowerShell"
+            },
+            {
+                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
+                "hidden": false,
+                "name": "Command Prompt"
+            }
+        ]
     },
-    {
-      "command": {
-        "action": "prevTab"
-      },
-      "keys": "ctrl+left"
-    },
-    {
-      "command": "paste",
-      "keys": "ctrl+v"
-    },
-    {
-      "command": {
-        "action": "copy",
-        "singleLine": false
-      },
-      "keys": "ctrl+c"
-    },
-    {
-      "command": {
-        "action": "nextTab"
-      },
-      "keys": "ctrl+right"
-    },
-    {
-      "command": "toggleFullscreen",
-      "keys": "ctrl+up"
-    }
-  ],
-  "copyFormatting": "none",
-  "copyOnSelect": false,
-  "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-  "profiles": {
-    "defaults": {
-      "colorScheme": "custom",
-      "font": {
-        "face": "FantasqueSansMono NF",
-        "size": 13
-      }
-    },
-    "list": [
-      {
-        "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-        "hidden": false,
-        "name": "PowerShell Core",
-        "source": "Windows.Terminal.PowershellCore"
-      },
-      {
-        "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
-        "hidden": false,
-        "name": "Windows PowerShell"
-      },
-      {
-        "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
-        "hidden": false,
-        "name": "Command Prompt"
-      }
+    "schemes": 
+    [
+        {
+            "background": "#1D1F21",
+            "black": "#1D1F21",
+            "blue": "#5DA5CF",
+            "brightBlack": "#B8DBEF",
+            "brightBlue": "#5DA5CF",
+            "brightCyan": "#FE64A3",
+            "brightGreen": "#21B58B",
+            "brightPurple": "#63549E",
+            "brightRed": "#A8324C",
+            "brightWhite": "#B8DBEF",
+            "brightYellow": "#FFB30F",
+            "cursorColor": "#FFFFFF",
+            "cyan": "#FE64A3",
+            "foreground": "#B8DBEF",
+            "green": "#21B58B",
+            "name": "custom",
+            "purple": "#63549E",
+            "red": "#A8324C",
+            "selectionBackground": "#FFFFFF",
+            "white": "#B8DBEF",
+            "yellow": "#FFB30F"
+        }
     ]
-  },
-  "schemes": [
-    {
-      "background": "#1D1F21",
-      "black": "#1D1F21",
-      "blue": "#5DA5CF",
-      "brightBlack": "#B8DBEF",
-      "brightBlue": "#5DA5CF",
-      "brightCyan": "#FE64A3",
-      "brightGreen": "#21B58B",
-      "brightPurple": "#63549E",
-      "brightRed": "#A8324C",
-      "brightWhite": "#B8DBEF",
-      "brightYellow": "#FFB30F",
-      "cursorColor": "#FFFFFF",
-      "cyan": "#FE64A3",
-      "foreground": "#B8DBEF",
-      "green": "#21B58B",
-      "name": "custom",
-      "purple": "#63549E",
-      "red": "#A8324C",
-      "selectionBackground": "#FFFFFF",
-      "white": "#B8DBEF",
-      "yellow": "#FFB30F"
-    }
-  ]
 }
