--- a/windows-terminal/settings.json
+++ b/windows-terminal/settings.json
@@ -56,7 +56,8 @@
             {
                 "face": "FantasqueSansM Nerd Font",
                 "size": 13.0
-            }
+            },
+            "startingDirectory": "%DevDir%"
         },
         "list": 
         [
