--- a/firefox/firefox.cfg
+++ b/firefox/firefox.cfg
@@ -8,24 +8,37 @@ lockPref("beacon.enabled", false);
 lockPref("breakpad.reportURL", "");
 lockPref("browser.aboutConfig.showWarning", false);
 lockPref("browser.aboutHomeSnippets.updateUrL", "");
+lockPref("browser.cache.disk.enable", false);
 lockPref("browser.cache.offline.enable", false);
+lockPref("browser.contentblocking.category", "strict");
 lockPref("browser.crashReports.unsubmittedCheck.autoSubmit", false);
 lockPref("browser.crashReports.unsubmittedCheck.autoSubmit2", false);
 lockPref("browser.crashReports.unsubmittedCheck.enabled", false);
 lockPref("browser.disableResetPrompt", true);
+lockPref("browser.discovery.enabled", false);
+lockPref("browser.display.use_system_colors", false );
+lockPref("browser.download.manager.addToRecentDocs", false);
 lockPref("browser.fixup.alternate.enabled", false);
 lockPref("browser.formfill.enable", false);
+lockPref("browser.helperApps.deleteTempFileOnExit", true);
 lockPref("browser.newtab.preload", false);
 lockPref("browser.newtabpage.activity-stream.feeds.telemetry", false);
 lockPref("browser.newtabpage.activity-stream.section.highlights.includePocket", false);
 lockPref("browser.newtabpage.activity-stream.telemetry", false);
-lockPref("browser.newtabpage.enabled", false);
+lockPref("browser.newtabpage.enabled", true);
 lockPref("browser.newtabpage.enhanced", false);
 lockPref("browser.newtabpage.introShown", true);
+lockPref("browser.pagethumbnails.capturing_disabled", true);
 lockPref("browser.ping-centre.telemetry", false);
+lockPref("browser.places.speculativeConnect.enabled", false);
+lockPref("browser.region.network.url", "");
+lockPref("browser.region.update.enabled", false);
+lockPref("browser.safebrowsing.allowOverride", false);
 lockPref("browser.safebrowsing.appRepURL", "");
 lockPref("browser.safebrowsing.blockedURIs.enabled", false);
 lockPref("browser.safebrowsing.downloads.enabled", false);
+lockPref("browser.safebrowsing.downloads.remote.block_potentially_unwanted", false);
+lockPref("browser.safebrowsing.downloads.remote.block_uncommon", false);
 lockPref("browser.safebrowsing.downloads.remote.enabled", false);
 lockPref("browser.safebrowsing.downloads.remote.url", "");
 lockPref("browser.safebrowsing.enabled", false);
@@ -55,14 +68,23 @@ lockPref("browser.selfsupport.url", "");
 lockPref("browser.send_pings.require_same_host", true);
 lockPref("browser.send_pings", false);
 lockPref("browser.sessionstore.privacy_level", 2);
+lockPref("browser.sessionstore.resume_from_crash", false);
 lockPref("browser.shell.checkDefaultBrowser", false);
+lockPref("browser.shell.shortcutFavicons", false);
+lockPref("browser.startup.blankWindow", false);
 lockPref("browser.startup.homepage_override.buildID", "");
 lockPref("browser.startup.homepage_override.mstone", "ignore");
 lockPref("browser.tabs.crashReporting.sendReport", false);
 lockPref("browser.urlbar.groupLabels.enabled", false);
 lockPref("browser.urlbar.quicksuggest.enabled", false);
+lockPref("browser.urlbar.quicksuggest.scenario", "history");
 lockPref("browser.urlbar.speculativeConnect.enabled", false);
+lockPref("browser.urlbar.suggest.quicksuggest.nonsponsored", false);
+lockPref("browser.urlbar.suggest.quicksuggest.sponsored", false);
+lockPref("browser.urlbar.suggest.searches", false);
 lockPref("browser.urlbar.trimURLs", false);
+lockPref("browser.xul.error_pages.expert_bad_cert", true);
+lockPref("captivedetect.canonicalURL", "");
 lockPref("config.trim_on_minimize", true);
 lockPref("datareporting.healthreport.service.enabled", false);
 lockPref("datareporting.healthreport.uploadEnabled", false);
@@ -75,48 +97,72 @@ lockPref("device.sensors.orientation.enabled", false);
 lockPref("device.sensors.proximity.enabled", false);
 lockPref("devtools.onboarding.telemetry.logged", false);
 lockPref("dom.battery.enabled", false);
+lockPref("dom.disable_open_during_load", true);
 lockPref("dom.event.clipboardevents.enabled", false);
 lockPref("dom.event.contextmenu.enabled", false);
+lockPref("dom.popup_allowed_events", "click dblclick mousedown pointerdown");
 lockPref("dom.security.https_only_mode_ever_enabled", true);
+lockPref("dom.security.https_only_mode_send_http_background_request", false);
 lockPref("dom.security.https_only_mode", true);
 lockPref("dom.webaudio.enabled", false);
 lockPref("experiments.activeExperiment", false);
 lockPref("experiments.enabled", false);
 lockPref("experiments.manifest.uri", "");
 lockPref("experiments.supported", false);
+lockPref("extensions.enabledScopes", 5);
+lockPref("extensions.formautofill.addresses.enabled", false);
+lockPref("extensions.formautofill.available", "off");
+lockPref("extensions.formautofill.creditCards.available", false);
+lockPref("extensions.formautofill.creditCards.enabled", false);
+lockPref("extensions.formautofill.heuristics.enabled", false);
 lockPref("extensions.getAddons.cache.enabled", false);
 lockPref("extensions.getAddons.showPane", false);
+lockPref("extensions.htmlaboutaddons.recommendations.enabled", false);
 lockPref("extensions.pocket.api", "");
 lockPref("extensions.pocket.enabled", false);
 lockPref("extensions.pocket.oAuthConsumerKey", "");
 lockPref("extensions.pocket.site", "");
+lockPref("extensions.postDownloadThirdPartyPrompt", false);
+lockPref("extensions.Screenshots.disabled", true);
 lockPref("extensions.screenshots.upload-disabled", true);
 lockPref("extensions.shield-recipe-client.api_url", "");
 lockPref("extensions.shield-recipe-client.enabled", false);
+lockPref("extensions.webextensions.restrictedDomains", "");
 lockPref("extensions.webservice.discoverURL", "");
-lockPref("general.useragent.override", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36");
 lockPref("general.warnOnAboutConfig", false);
 lockPref("geo.enabled", false);
+lockPref("geo.provider.ms-windows-location", false);
+lockPref("geo.provider.use_corelocation", false);
+lockPref("geo.provider.use_geoclue", false);
+lockPref("geo.provider.use_gpsd", false);
 lockPref("geo.wifi.uri", "");
 lockPref("javascript.options.wasm", false);
 lockPref("keyword.enabled", false);
 lockPref("layout.frame_rate.precise", true);
 lockPref("loop.enabled", false);
-lockPref("media.autoplay.default", 1);
+lockPref("media.autoplay.default", 5);
 lockPref("media.autoplay.enabled", false);
 lockPref("media.eme.enabled", false);
 lockPref("media.gmp-widevinecdm.enabled", false);
 lockPref("media.navigator.enabled", false);
 lockPref("media.peerconnection.enabled", false);
+lockPref("media.peerconnection.ice.default_address_only", true);
+lockPref("media.peerconnection.ice.no_host", true);
+lockPref("media.peerconnection.ice.proxy_only_if_behind_proxy", true);
 lockPref("media.video_stats.enabled", false);
 lockPref("network.allow-experiments", false);
+lockPref("network.auth.subresource-http-auth-allow", 1);
 lockPref("network.captive-portal-service.enabled", false);
+lockPref("network.connectivity-service.enabled", false);
 lockPref("network.cookie.cookieBehavior", 1);
+lockPref("network.cookie.lifetimePolicy", 2);
 lockPref("network.dns.disableIPv6", true);
 lockPref("network.dns.disablePrefetch", true);
 lockPref("network.dns.disablePrefetchFromHTTPS", true);
 lockPref("network.dnsCacheEntries", 100);
 lockPref("network.dnsCacheExpiration", 60);
+lockPref("network.file.disable_unc_paths", true);
+lockPref("network.gio.supported-protocols", "");
 lockPref("network.http.referer.spoofSource", true);
 lockPref("network.http.referer.XOriginPolicy", 2);
 lockPref("network.http.referer.XOriginTrimmingPolicy", 2);
@@ -129,26 +175,66 @@ lockPref("network.predictor.enabled", false);
 lockPref("network.prefetch-next", false);
 lockPref("network.trr.mode", 5);
 lockPref("network.websocket.enabled", false);
+lockPref("pdfjs.enableScripting", false);
+lockPref("permissions.manager.defaultsUrl", "");
 lockPref("places.history.enabled", false);
 lockPref("plugins.enumerable_names", "");
+lockPref("privacy.clearOnShutdown.cache", true);
+lockPref("privacy.clearOnShutdown.cookies", true);
+lockPref("privacy.clearOnShutdown.downloads", true);
+lockPref("privacy.clearOnShutdown.formdata", true);
+lockPref("privacy.clearOnShutdown.history", true);
+lockPref("privacy.clearOnShutdown.offlineApps", true);
+lockPref("privacy.clearOnShutdown.sessions", true);
+lockPref("privacy.clearOnShutdown.sitesettings", false);
 lockPref("privacy.donottrackheader.enabled", true);
 lockPref("privacy.donottrackheader.value", 1);
 lockPref("privacy.firstparty.isolate", true);
+lockPref("privacy.partition.always_partition_third_party_non_cookie_storage.exempt_sessionstorage", true);
+lockPref("privacy.partition.always_partition_third_party_non_cookie_storage", true);
+lockPref("privacy.partition.serviceWorkers", true);
 lockPref("privacy.query_stripping", true);
+lockPref("privacy.resistFingerprinting.block_mozAddonManager", true);
+lockPref("privacy.resistFingerprinting", true);
+lockPref("privacy.sanitize.sanitizeOnShutdown", true);
+lockPref("privacy.sanitize.timeSpan", 0);
 lockPref("privacy.trackingprotection.cryptomining.enabled", true);
 lockPref("privacy.trackingprotection.enabled", true);
 lockPref("privacy.trackingprotection.fingerprinting.enabled", true);
 lockPref("privacy.trackingprotection.pbmode.enabled", true);
 lockPref("privacy.usercontext.about_newtab_segregation.enabled", true);
+lockPref("privacy.userContext.enabled", true);
+lockPref("privacy.window.maxInnerHeight", 1080);
+lockPref("privacy.window.maxInnerWidth", 1920);
+lockPref("rowser.newtabpage.activity-stream.default.sites", "");
+lockPref("rowser.newtabpage.activity-stream.feeds.discoverystreamfeed", false);
+lockPref("rowser.newtabpage.activity-stream.feeds.section.topstories", false);
+lockPref("rowser.newtabpage.activity-stream.feeds.snippets", false);
+lockPref("rowser.newtabpage.activity-stream.feeds.telemetry", false);
+lockPref("rowser.newtabpage.activity-stream.section.highlights.includePocket", false);
+lockPref("rowser.newtabpage.activity-stream.showSponsored", false);
+lockPref("rowser.newtabpage.activity-stream.showSponsoredTopSites", false);
+lockPref("rowser.newtabpage.activity-stream.telemetry", false);
+lockPref("security.cert_pinning.enforcement_level", 2);
+lockPref("security.OCSP.require", true);
+lockPref("security.pki.crlite_mode", 2);
+lockPref("security.pki.sha1_enforcement_level", 1);
+lockPref("security.remote_settings.crlite_filters.enabled", true);
 lockPref("security.ssl.disable_session_identifiers", true);
+lockPref("security.tls.enable_0rtt_data", false);
 lockPref("services.sync.prefs.sync.browser.newtabpage.activity-stream.showSponsoredTopSite", false);
 lockPref("signon.autofillForms", false);
+lockPref("signon.formlessCapture.enabled", false);
+lockPref("signon.rememberSignons", false);
 lockPref("startup.homepage_override_url", "");
 lockPref("startup.homepage_welcome_url.additional", "");
 lockPref("startup.homepage_welcome_url", "");
+lockPref("toolkit.coverage.endpoint.base", "");
+lockPref("toolkit.coverage.opt-out", true);
 lockPref("toolkit.telemetry.archive.enabled", false);
 lockPref("toolkit.telemetry.bhrPing.enabled", false);
 lockPref("toolkit.telemetry.cachedClientID", "");
+lockPref("toolkit.telemetry.coverage.opt-out", true);
 lockPref("toolkit.telemetry.enabled", false);
 lockPref("toolkit.telemetry.firstShutdownPing.enabled", false);
 lockPref("toolkit.telemetry.hybridContent.enabled", false);
